--- a/PortfolioProject/css/main.css
+++ b/PortfolioProject/css/main.css
@@ -1,11 +1,50 @@
-.background{
-    background-image: url(https://static.timesofisrael.com/www/uploads/2018/06/high-tech.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+.import url('https://fonts.googleapis.com/css?family=Raleway');
+
+html,h1,h2,h3,h4,h5,h6,a{
+    font-family: "Raleway";
+}
+
+.cover{
+    background-image: url("https://images.unsplash.com/photo-1485988412941-77a35537dae4?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Y29tcHV0ZXJzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80");
+    background-attachment: fixed;
+    background-size:cover;
     background-position: center;
-    padding: 20px;
+    background-repeat: no-repeat;
     width: 100%;
-    height: 700px;
+    height: 750px;
+}
+#overlay {
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   }
-  
+.header {
+    position: relative;
+    margin-top: -380px;
+    color: white;
+    margin-left: 300px ;
+    margin-right: 600px;
+}
+.container .row {
+margin-top: 230px;
+text-align: center;
+}
+.container .row h1{
+    margin-bottom: 30px;
+    color: chartreuse;
+}
+.container .row .shon img{
+    border-radius: 100%;
+}
+.container .row .boarder{
+    border-left: 1px solid black;
+    padding-top: 150px;
+}
+.container .row .col img{
+width: 100%;
 }
